Added design changes

--- a/DriversGalaxy/Properties/Resources.resx
+++ b/DriversGalaxy/Properties/Resources.resx
@@ -651,4 +651,8 @@ It is possible that the screen may turn black during this update for a short per
   <data name="WrongLicenseKey" xml:space="preserve">
     <value>License key not valid. Please try again!</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="DriverGalaxy" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\DriverGalaxy.ico;System.Drawing.Icon, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
