--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
@@ -287,4 +287,13 @@ Bitte drücken Sie "Erstelle Datenbank" um die Treiber für die Migration auf Ih
   <data name="UrlCannotBeOpenedTitle" xml:space="preserve">
     <value>Link kann nicht automatisch geöffnet werden</value>
   </data>
+  <data name="About" xml:space="preserve">
+    <value>Über</value>
+  </data>
+  <data name="AllRightsReserved" xml:space="preserve">
+    <value>Alle Rechte vorbehalten.</value>
+  </data>
+  <data name="RootUrl" xml:space="preserve">
+    <value>http://freemium.com/free-driver-scout/</value>
+  </data>
 </root>
