--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.resx
@@ -287,4 +287,13 @@ Now press the Compose button below to create a drivers installation utility for 
   <data name="UrlCannotBeOpenedTitle" xml:space="preserve">
     <value>Link cannot be opened automatically</value>
   </data>
+  <data name="About" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="AllRightsReserved" xml:space="preserve">
+    <value>All rights reserved.</value>
+  </data>
+  <data name="RootUrl" xml:space="preserve">
+    <value>http://freemium.com/free-driver-scout/</value>
+  </data>
 </root>
