--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
@@ -294,6 +294,6 @@ Bitte drücken Sie "Erstelle Datenbank" um die Treiber für die Migration auf Ih
     <value>Alle Rechte vorbehalten.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/free-driver-scout/</value>
+    <value>http://freemium.com/driversgalaxy/</value>
   </data>
 </root>
