--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.resx
@@ -294,6 +294,6 @@ Now press the Compose button below to create a drivers installation utility for 
     <value>All rights reserved.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/free-driver-scout/</value>
+    <value>http://freemium.com/driversgalaxy/</value>
   </data>
 </root>
