--- a/DriversGalaxy.OSMigrationTool.Restore/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy.OSMigrationTool.Restore/Properties/Resources.de-DE.resx
@@ -215,6 +215,6 @@ Please, generate the drivers migration package for the correct OS version.</valu
     <value>Alle Rechte vorbehalten.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/free-driver-scout/</value>
+    <value>http://freemium.com/driversgalaxy/</value>
   </data>
 </root>
