--- a/DriversGalaxy/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy/Properties/Resources.de-DE.resx
@@ -513,7 +513,7 @@ Wählen Sie einen Ordner für heruntergeladene Treiber</value>
     <value>Alle Rechte vorbehalten.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/free-driver-scout/</value>
+    <value>http://freemium.com/driversgalaxy/</value>
   </data>
   <data name="FeedbackUrl" xml:space="preserve">
     <value>http://de.freemium.com/kontakt/fdc/</value>
