--- a/DriversGalaxy/Properties/Resources.resx
+++ b/DriversGalaxy/Properties/Resources.resx
@@ -507,7 +507,7 @@ Select the folder for driver downloads</value>
     <value>OS Migration Tool</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/free-driver-scout/</value>
+    <value>http://freemium.com/driversgalaxy/</value>
   </data>
   <data name="About" xml:space="preserve">
     <value>About</value>
