Removed Themes folder, changed post building action for OS Migration Tool, changed the WPFLocalizeExtension.dll to newer version.
Project DriversGalaxy and project DriversGalaxy.OSMigration tool used
different versions of WPFLocalizeExtension.dll, one of them was newer,
had to download latest version from the site and apply it to all
projects where it is used.

--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
@@ -258,7 +258,7 @@ Bitte drücken Sie "Erstelle Datenbank" um die Treiber für die Migration auf Ih
     <value>Download abgeschlossen</value>
   </data>
   <data name="DownloadStatus" xml:space="preserve">
-    <value>Heruntergeladene {{0}} von {{1}}</value>
+    <value>Heruntergeladene {0} von {1}</value>
   </data>
   <data name="GoogleMargin" xml:space="preserve">
     <value>-67</value>
