--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.de-DE.resx
@@ -294,6 +294,18 @@ Bitte drücken Sie "Erstelle Datenbank" um die Treiber für die Migration auf Ih
     <value>Alle Rechte vorbehalten.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/driversgalaxy/</value>
+    <value>http://pallysoft.com/driversgalaxy/</value>
+  </data>
+  <data name="SelectOS" xml:space="preserve">
+    <value>Wählen Betriebssystem</value>
+  </data>
+  <data name="SelectOSToScan" xml:space="preserve">
+    <value>Bitte wählen Sie mindestens ein Betriebssystem.</value>
+  </data>
+  <data name="ScanSystem" xml:space="preserve">
+    <value>Scannen Sie Ihr System</value>
+  </data>
+  <data name="ToolDescription" xml:space="preserve">
+    <value>dieses Tool tun sollten, ist die Benutzer-Treiber zum Scannen und laden Sie den passenden Treiber aus unserer Datenbank, aber nicht für seine aktuelle os, sondern es wird für die os sein, dass er wandert</value>
   </data>
 </root>
