--- a/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.resx
+++ b/DriversGalaxy.OSMigrationTool.Backup/Properties/Resources.resx
@@ -171,7 +171,7 @@
   </data>
   <data name="DownloadFinishedPressCompose" xml:space="preserve">
     <value>Drivers downloaded.
-Now press the Compose button below to create a drivers installation utility for the destination OS, which will be saved in a place that you've choosed.</value>
+Now press the Compose button below to create a drivers installation utility for the destination OS, which will be saved in a place that you've choosen.</value>
   </data>
   <data name="DownloadingDriver" xml:space="preserve">
     <value>Downloading driver for: </value>
@@ -294,6 +294,18 @@ Now press the Compose button below to create a drivers installation utility for 
     <value>All rights reserved.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/driversgalaxy/</value>
+    <value>http://pallysoft.com/driversgalaxy/</value>
+  </data>
+  <data name="SelectOS" xml:space="preserve">
+    <value>Select OS</value>
+  </data>
+  <data name="SelectOSToScan" xml:space="preserve">
+    <value>Please, select at least one operation system.</value>
+  </data>
+  <data name="ScanSystem" xml:space="preserve">
+    <value>Scan your system</value>
+  </data>
+  <data name="ToolDescription" xml:space="preserve">
+    <value>this tool should do is scan the users drivers and download the matching driver from our database, but not for his current os, instead it will be for the os that he migrates to</value>
   </data>
 </root>
