--- a/DriversGalaxy/Properties/Resources.de-DE.resx
+++ b/DriversGalaxy/Properties/Resources.de-DE.resx
@@ -513,10 +513,10 @@ Wählen Sie einen Ordner für heruntergeladene Treiber</value>
     <value>Alle Rechte vorbehalten.</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/driversgalaxy/</value>
+    <value>http://pallysoft.com/driversgalaxy/</value>
   </data>
   <data name="FeedbackUrl" xml:space="preserve">
-    <value>http://de.freemium.com/kontakt/fdc/</value>
+    <value>http://pallysoft.com/contact/</value>
   </data>
   <data name="ScanCompleted" xml:space="preserve">
     <value>Scan fertig</value>
