--- a/DriversGalaxy/Properties/Resources.resx
+++ b/DriversGalaxy/Properties/Resources.resx
@@ -504,7 +504,7 @@ Select the folder for driver downloads</value>
     <value>OS Migration Tool</value>
   </data>
   <data name="RootUrl" xml:space="preserve">
-    <value>http://freemium.com/driversgalaxy/</value>
+    <value>http://pallysoft.com/driversgalaxy/</value>
   </data>
   <data name="About" xml:space="preserve">
     <value>About</value>
@@ -513,7 +513,7 @@ Select the folder for driver downloads</value>
     <value>All rights reserved.</value>
   </data>
   <data name="FeedbackUrl" xml:space="preserve">
-    <value>http://freemium.com/contact/fdc/</value>
+    <value>http://pallysoft.com/contact/</value>
   </data>
   <data name="ScanCompleted" xml:space="preserve">
     <value>Scan completed</value>
